--- a/Web/Pages/Mockups/External_Candidate.cshtml
+++ b/Web/Pages/Mockups/External_Candidate.cshtml
@@ -7,14 +7,14 @@
 
 <section role="contentinfo">
     <div class="col-md-12">
-        <h2>Which area would you like to explore?</h2>
+        <h2>@Localizer["Q1"]</h2>
         <div class="row">
             <div class="col-sm-4">
                 <figure>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" href="External_Shoreside">
                         <img src="~/img/shoreside.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Shoreside Positions</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Shoreside"]</h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-4">
@@ -22,7 +22,7 @@
                     <a href="External_Seagoing">
                         <img src="~/img/Seagoing.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Seagoing Positions</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Seagoing"]</h4></figcaption>
                 </figure>
             </div>
         </div>
