--- a/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuFooter.cshtml
@@ -8,34 +8,37 @@
             <nav role="navigation">
                 <h2>About this site</h2>
                 <ul id="gc-tctr" class="list-inline">
-                    <li><a rel="license" href="http://wet-boew.github.io/wet-boew/License-en.html">Terms and conditions</a></li>
-                    <li><a href="http://www.tbs-sct.gc.ca/tbs-sct/common/trans-eng.asp">Transparency</a></li>
+                    <li><a rel="license" href="https://www.dfo-mpo.gc.ca/terms-conditions-avis-eng.htm" alt="Link to Terms and Conditions" target="_blank">Terms and conditions</a></li>
+                    <li><a href="https://www.dfo-mpo.gc.ca/transparency-transparence/index-eng.htm" alt="Link to the transparency page" target="_blank">Transparency</a></li>
                 </ul>
                 <div class="row">
                     <section class="col-sm-3">
-                        <h3>Contact us</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/contact/index-eng.html" alt="Link to contact the CCG" target="_blank">Contact us</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new">Questions or comments?</a></li>
+                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new" alt="Link to send us your questions or comments" target="_blank">Questions or comments?</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>About</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/index-eng.html" alt="Link to learn more about the CCG" target="_blank">About us</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="http://wet-boew.github.io/v4.0-ci/index-en.html#about">About the Web Experience Toolkit</a></li>
-                            <li><a href="http://www.tbs-sct.gc.ca/ws-nw/index-eng.asp">About the Web Standards</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/mandate-mandat-eng.html" alt="Link to CCG organization" target="_blank">Our organization</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-eng.html" alt="Link to CCG Careers" target="_blank">Jobs and careers</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/publications/index-eng.html" alt="Link to CCG Publications" target="_blank">Publications</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>News</h3>
+                        <h3><a href="https://www.canada.ca/en/news/advanced-news-search/news-results.html?_=1538673600620&dprtmnt=canadiancoastguard&start=&end" alt="Link to CCG News" target="_blank">News</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/pulse">Recent project activity</a></li>
-                            <li><a href="https://github.com/wet-boew/wet-boew/graphs">Project statistics</a></li>
+                            <li><a href="https://www.canada.ca/en/news/advanced-news-search/news-results.html?typ=newsreleases&dprtmnt=canadiancoastguard&start=&end=" alt="Link to CCG latest news releases" target="_blank">News releases</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>Stay connected</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-eng.html">Stay connected</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://twitter.com/WebExpToolkit">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/CanadianCoastGuard" alt="Link to CCG on Facebook" target="_blank">Facebook</a></li>
+                            <li><a href="https://twitter.com/CoastGuardCAN" alt="Link to CCG on Twitter" target="_blank">Twitter</a></li>
+                            <li><a href="https://www.youtube.com/user/CCGrecruitmentGCC" alt="Link to CCG on YouTube" target="_blank">YouTube</a></li>
+                            <li><a href="https://www.instagram.com/coastguardcan/" alt="Link to CCG on Instagram" target="_blank">Instagram</a></li>
                         </ul>
                     </section>
                 </div>
@@ -66,34 +69,37 @@ else
             <nav role="navigation">
                 <h2>À propos de ce site</h2>
                 <ul id="gc-tctr" class="list-inline">
-                    <li><a rel="license" href="http://wet-boew.github.io/wet-boew/License-fr.html">Avis</a></li>
-                    <li><a href="http://www.tbs-sct.gc.ca/tbs-sct/common/trans-fra.asp">Transparence</a></li>
+                    <li><a rel="license" href="https://www.dfo-mpo.gc.ca/terms-conditions-avis-fra.htm" alt="Lien vers les conditions générales" target="_blank">Avis</a></li>
+                    <li><a href="https://www.dfo-mpo.gc.ca/transparency-transparence/index-fra.htm" alt="Lien vers la page de transparence" target="_blank">Transparence</a></li>
                 </ul>
                 <div class="row">
                     <section class="col-sm-3">
-                        <h3>Contactez-nous</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/contact/index-fra.html" alt="Lien pour contacter la CCG" target="_blank">Contactez-nous</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new">Questions ou commentaires?</a></li>
+                            <li><a href="https://github.com/wet-boew/wet-boew/issues/new" alt="Lien pour nous envoyer vos questions ou commentaires" target="_blank">Questions ou commentaires?</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>À propos</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/index-fra.html" alt="Lien pour en savoir plus sur la CCG" target="_blank">À propos de nous</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="http://wet-boew.github.io/v4.0-ci/index-fr.html#apropos">À propos de la Boîte à outils de l’expérience Web</a></li>
-                            <li><a href="http://www.tbs-sct.gc.ca/ws-nw/index-fra.asp">À propos des normes Web</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/mandate-mandat-fra.html" alt="Lien pour en savoir plus sur l'organisation CCG" target="_blank">Notre organisation</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/careers-carrieres/index-fra.html" alt="Lien vers les carrières de la GCC" target="_blank">Emplois et carrières</a></li>
+                            <li><a href="https://www.ccg-gcc.gc.ca/publications/index-fra.html" alt="Lien vers les publications de la GCC" target="_blank">Publications</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>Nouvelles</h3>
+                        <h3><a href="https://www.canada.ca/fr/nouvelles/recherche-avancee-de-nouvelles/resultats-de-nouvelles.html?_=1538673652642&typ=&dprtmnt=canadiancoastguard&mnstr=&start=&end=" alt="Lien vers les nouvelles de la GCC" target="_blank">Nouvelles</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://github.com/wet-boew/wet-boew/pulse">Activité du projet récente</a></li>
-                            <li><a href="https://github.com/wet-boew/wet-boew/graphs">Statistiques du projet</a></li>
+                            <li><a href="https://www.canada.ca/fr/nouvelles/recherche-avancee-de-nouvelles/resultats-de-nouvelles.html" alt="Lien vers les dernières nouvelles de la GCC" target="_blank">Communiqués</a></li>
                         </ul>
                     </section>
                     <section class="col-sm-3">
-                        <h3>Restez branchés</h3>
+                        <h3><a href="https://www.ccg-gcc.gc.ca/corporation-information-organisation/stay-connected-restez-branches-fra.html">Restez branchés</a></h3>
                         <ul class="list-unstyled">
-                            <li><a href="https://twitter.com/BoiteExpWeb">Twitter</a></li>
+                            <li><a href="https://www.facebook.com/GardeCotiereCanadienne" alt="Lien vers GCC sur Facebook" target="_blank">Facebook</a></li>
+                            <li><a href="https://twitter.com/GardeCotiereCAN" alt="Lien vers GCC sur Twitter" target="_blank">Twitter</a></li>
+                            <li><a href="https://www.youtube.com/channel/UCkgQNPhq4ZKgZd7abZ3BYvw" alt="Lien vers GCC sur YouTube" target="_blank">YouTube</a></li>
+                            <li><a href="https://www.instagram.com/gardecotiereCAN/" alt="Lien vers GCC sur Instagram" target="_blank">Instagram</a></li>
                         </ul>
                     </section>
                 </div>
