--- a/Web/Pages/Mockups/Member_Position.cshtml
+++ b/Web/Pages/Mockups/Member_Position.cshtml
@@ -7,158 +7,144 @@
         <div class="col-md-12">
             <h2>@Localizer["CatPosition"]</h2>
 
-            <div class="row">
-                <div class="col-sm-3 mrgn-bttm-md">
+            
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <a href="Current_Position"><img src="~/img/AS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
-                        <figcaption class="text-center"><h6>@Localizer["AdminAS"]</h6></figcaption>
+                        <a href="Current_Position"><img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" /></a>
+                        <figcaption class="text-center"><h6>@Localizer["AS"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/ENG.jpg" alt="Photo of engineering room" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["EngineeringENG"]</h6></figcaption>
+                        <img src="~/img/CCGMember/ENG.jpg" alt="Photo of engineering room" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["ENG"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/CR-clerical.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ClericalCR"]</h6></figcaption>
+                        <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["CS"]</h6></figcaption>
+                    </figure>
+                </div>
+            
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/EC.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["EC"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/CS-Systems.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ComputerCS"]</h6></figcaption>
-                    </figure>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/EC.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["EconomicsEC"]</h6></figcaption>
+                        <img src="~/img/CCGMember/ED.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["ED"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/ED.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["EducationED"]</h6></figcaption>
+                        <img src="~/img/CCGMember/EU.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["EU"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/EU.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["EduSupportEU"]</h6></figcaption>
+                        <img src="~/img/CCGMember/EG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["EG"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/EX.jpg" alt="Photo of Executive members of the CCG" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["EX"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/GL.jpg" alt="Photo of a welder" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["GL"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["GS"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/GT.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["GT"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/LS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["LS"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/EG-EngSci.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["EngSciEG"]</h6></figcaption>
-                    </figure>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/EX-executive.jpg" alt="Photo of Executive members of the CCG" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ExecutiveEX"]</h6></figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/GL.jpg" alt="Photo of a welder" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["GLabourGL"]</h6></figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/GS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["GServicesGS"]</h6></figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/EG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["GTechnicalGT"]</h6></figcaption>
-                    </figure>
-                </div>
-            </div>
-
-            <div class="row">
-
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/LS.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["LibraryLS"]</h6></figcaption>
+                        <img src="~/img/CCGMember/LI.jpg" alt="Photo of a lighthouse" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["LI"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/LI.jpg" alt="Photo of a lighthouse" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["LightkeepersLI"]</h6></figcaption>
+                        <img src="~/img/CCGMember/NU.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["NU"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/NU.jpg" alt="Photo of landmass and anchor" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["NursingNU"]</h6></figcaption>
+                        <img src="~/img/CCGMember/OE.jpg" alt="Photo of Office" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["OE"]</h6></figcaption>
+                    </figure>
+                </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/PM.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["PM"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/OE.jpg" alt="Photo of Office" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["OfficeOE"]</h6></figcaption>
+                        <img src="~/img/CCGMember/PG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["PG"]</h6></figcaption>
                     </figure>
                 </div>
-            </div>
-
-            <div class="row">
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/PM.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ProgramAdminPM"]</h6></figcaption>
+                        <img src="~/img/CCGMember/RO.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["RO"]</h6></figcaption>
                     </figure>
                 </div>
 
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/PG.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["PurchasingPG"]</h6></figcaption>
-                    </figure>
-                </div>
-                <div class="col-sm-3 mrgn-bttm-md">
-                    <figure>
-                        <img src="~/img/RO.jpg" alt="Photo of" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["RadioRO"]</h6></figcaption>
-                    </figure>
-                </div>
-
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
                         <img src="~/img/SC.jpg" alt="Photo of crewmembers" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ShipCrewSC"]</h6></figcaption>
+                        <figcaption class="text-center"><h6>@Localizer["SC"]</h6></figcaption>
                     </figure>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3 mrgn-bttm-md">
+                <div class="col-sm-4 mrgn-bttm-md">
                     <figure>
-                        <img src="~/img/SO.jpg" alt="Photo of a ships' officer" class="img-responsive thumbnail mrgn-bttm-sm" />
-                        <figcaption class="text-center"><h6>@Localizer["ShipOfficerSO"]</h6></figcaption>
+                        <img src="~/img/CCGMember/SO.jpg" alt="Photo of a ships' officer" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["SO"]</h6></figcaption>
                     </figure>
                 </div>
-            </div>
+                <div class="col-sm-4 mrgn-bttm-md">
+                    <figure>
+                        <img src="~/img/CCGMember/TI.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                        <figcaption class="text-center"><h6>@Localizer["TI"]</h6></figcaption>
+                    </figure>
+                </div>
+            
         </div>
 </section>
