--- a/Web/Pages/Mockups/Ship_Crew.cshtml
+++ b/Web/Pages/Mockups/Ship_Crew.cshtml
@@ -1,18 +1,19 @@
 ﻿@page
 @model Web.Pages.Mockups.Ship_CrewModel
+@inject IViewLocalizer Localizer
 @{
 }
 
 <section role="contentinfo">
     <div class="col-md-12">
-        <h2>Please select your preferred field of employment</h2>
+        <h2>@Localizer["Q1"]</h2>
         <div class="row">
             <div class="col-sm-3">
                 <figure>
                     <a class="nav-link" href="Crew_Deck">
                         <img src="~/img/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Deck</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-3">
@@ -20,7 +21,7 @@
                     <a href="Crew_Engineering">
                         <img src="~/img/oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Engineering</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-3">
@@ -28,7 +29,7 @@
                     <a href="Crew_Logistics">
                         <img src="~/img/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Logistics</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Logistics"]</h4></figcaption>
                 </figure>
             </div>
         </div>
