--- a/Web/Pages/Mockups/Ship_Officer.cshtml
+++ b/Web/Pages/Mockups/Ship_Officer.cshtml
@@ -1,18 +1,19 @@
 ﻿@page
 @model Web.Pages.Mockups.Ship_OfficerModel
+@inject IViewLocalizer Localizer
 @{
 }
 
 <section role="contentinfo">
     <div class="col-md-12">
-        <h2>Please select your preferred field of employment</h2>
+        <h2>@Localizer["Q1"]</h2>
         <div class="row">
             <div class="col-sm-4">
                 <figure>
                     <a class="nav-link" href="Nav_Officer">
                         <img src="~/img/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Navigation</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
                 </figure>
             </div>
             <div class="col-sm-4">
@@ -20,7 +21,7 @@
                     <a href="Eng_Officer">
                         <img src="~/img/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                     </a>
-                    <figcaption><h4 class="text-center">Engineering</h4></figcaption>
+                    <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
                 </figure>
             </div>
         </div>
