--- a/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwuMenu.cshtml
@@ -7,11 +7,10 @@
             <h2>Topics menu</h2>
             <div class="row">
                 <ul class="list-inline menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-eng.html">Navigation</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/index-eng.html">Fleet</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/college-careers-eng.html">College and careers</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/programs-services-eng.html">Programs and services</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/index-eng.html">Emergency numbers</a></li>
+                    <li><a href="/en/Mockups/Index">Career Competency Tool</a></li>
+                    <li><a href="/en/Mockups/member_position">CCG Member</a></li>
+                    <li><a href="/en/Mockups/External_Candidate">External Candidate</a></li>
+                    <li><a href="/en/Mockups/Student">Student</a></li>
                 </ul>
             </div>
         </div>
@@ -24,11 +23,10 @@ else
             <h2>Menu des sujets</h2>
             <div class="row">
                 <ul class="list-inline menu">
-                    <li><a href="https://www.ccg-gcc.gc.ca/navigation/index-fra.html">Navigation</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/fleet-flotte/index-fra.html">Flotte</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/college-careers-fra.html">Collège et carrières</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/programs-services-fra.html">Programmes et services</a></li>
-                    <li><a href="https://www.ccg-gcc.gc.ca/contact/emergency-urgence/index-fra.html">Numéros d’urgence</a></li>
+                    <li><a href="/fr/Mockups/Index">Outil de compétence professionnelle</a></li>
+                    <li><a href="/fr/Mockups/member_position">Membre de la GCC</a></li>
+                    <li><a href="/fr/Mockups/External_Candidate">Candidat externe</a></li>
+                    <li><a href="/fr/Mockups/Student">Étudiant</a></li>
                 </ul>
             </div>
         </div>
