Update to the menu links

--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -105,12 +105,12 @@
                     <div id="wb-sttl" class="col-md-5">
                         @if (isEnglish)
                         {
-                            <a href="/en/Mockups/Index">
+                            <a href="/en/">
                                 <span>CCG Career Competency Tool</span>
                             </a>
                         }
                         else {
-                            <a href="/fr/Mockups/Index">
+                            <a href="/fr/Index">
                                 <span>Outil de compétence professionnelle de la GCC</span>
                             </a> 
                             }
