Update to links in menu

--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -146,11 +146,11 @@
                     <ol class="breadcrumb">
                         @if (isEnglish)
                         {
-                            <li><a href="/en/Mockups/Index">Home</a></li>
+                            <li><a href="/en/">Home</a></li>
                         }
                         else
                         {
-                            <li><a href="/fr/Mockups/Index">Accueil</a></li>
+                            <li><a href="/fr/Index">Accueil</a></li>
                         }
                         @RenderSection("Breadcrumbs", required: false)
                     </ol>
