--- a/Web/Pages/Shared/_ThemeGcwu.cshtml
+++ b/Web/Pages/Shared/_ThemeGcwu.cshtml
@@ -105,12 +105,12 @@
                     <div id="wb-sttl" class="col-md-5">
                         @if (isEnglish)
                         {
-                            <a href="/en/Mockups/Index">
+                            <a href="/en/">
                                 <span>CCG Career Competency Tool</span>
                             </a>
                         }
                         else {
-                            <a href="/fr/Mockups/Index">
+                            <a href="/fr/Index">
                                 <span>Outil de compétence professionnelle de la GCC</span>
                             </a> 
                             }
@@ -146,11 +146,11 @@
                     <ol class="breadcrumb">
                         @if (isEnglish)
                         {
-                            <li><a href="/en/Mockups/Index">Home</a></li>
+                            <li><a href="/en/">Home</a></li>
                         }
                         else
                         {
-                            <li><a href="/fr/Mockups/Index">Accueil</a></li>
+                            <li><a href="/fr/Index">Accueil</a></li>
                         }
                         @RenderSection("Breadcrumbs", required: false)
                     </ol>
